hphp/hack/test/typecheck/reactive/rx_unresolved_byval_collection2.php.exp
File "rx_unresolved_byval_collection2.php", line 8, characters 12-24:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
File "rx_unresolved_byval_collection2.php", line 9, characters 14-25:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
